# PlanExWP6_IMU-EKF

./: .gitignore  LICENSE  README.md
gazebofiles/world/: test  testworld
rosws/devel/: .catkin  local_setup.sh  setup.sh
rosws/devel/lib/pkgconfig/: gazebo_tutorials.pc  rrbot_control.pc  rrbot_description.pc  rrbot_gazebo.pc  wp6imufilter.pc
rosws/src/simple_cube/: CMakeLists.txt  package.xml
rosws/src/simple_cube/launch/: simple_cube.launch  simple_cube.rviz
rosws/src/simple_cube/urdf/: simple_cube.urdf  simple_cube_hector.urdf
rosws/src/simple_cube_gazebo/: CMakeLists.txt  package.xml
rosws/src/simple_cube_gazebo/launch/: simple_cube_hector_world.launch  simple_cube_world.launch
rosws/src/sr_ros_navi_tutorial/: CMakeLists.txt  package.xml  setup.py
rosws/src/sr_ros_navi_tutorial/launch/: demo_turtlebot_mapping.launch  move_base.launch  sr-turtlesim-navigation.launch  sr-turtlesim-random-drive.launch  sr-turtlesim.launch  turtlebot_navi.launch  turtlebot_sim.launch
rosws/src/sr_ros_navi_tutorial/param/: base_local_planner_params.yaml  costmap_common_params.yaml
rosws/src/sr_ros_navi_tutorial/rviz/: sr-navi-turtlesim.rviz  sr-ros-rtabmap.rviz
rosws/src/sr_ros_navi_tutorial/src/: move_base_interface.py  publish_obstacles.py  setup_field.py
rosws/src/sr_ros_navi_tutorial/srv/: CreateObstacle.srv
rosws/src/turtlebot3_description/rviz/: model_and_camera.rviz
rosws/src/turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
rosws/src/wp6imufilter/: CMakeLists.txt  package.xml  setup.py
(+25 files in other folders)
