<?xml version="1.0"?>
<package>
  <name>simple_cube</name>
  <version>0.0.0</version>
  <description>The simple cube package</description>

  <maintainer email="g.liang@campus.tu-berlin.de">Ga Man Liang</maintainer>

  <license>BSD</license>

  <author email="g.liang@campus.tu-berlin.de">Ga Man Liang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
